# GLFWPractice

./: CMakeLists.txt
Header/: Camera.h  Constants.h  GLUtils.h  Geometry.h  Matrix.h  Matrix4.h  Sphere.h  Vector3.h  Vector4.h
Libraries/include/glad/: glad.h
Source/: Camera.cpp  GLUtils.cpp  Geometry.cpp  Matrix.cpp  Matrix4.cpp  Sphere.cpp  Vector3.cpp  Vector4.cpp  glad.c  main.cpp
